SFDEV/force-app/main/default/objects/Expense_Re__c/Expense_Re__c.object-meta.xml
<CustomObject>
    <label>Expense Reimbursement</label>
    <nameField>
        <label>Expense Re Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expense Reimbursements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>