SFDEV/force-app/main/default/objects/Expense_Re__c/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <formula>Distance_travelled__c  * 10</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>