SFDEV/force-app/main/default/objects/Expense_Re__c/fields/Amount_Spent__c.field-meta.xml
<CustomField>
    <fullName>Amount_Spent__c</fullName>
    <label>Amount Spent</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>