SFDEV/force-app/main/default/objects/Expense_Re__c/fields/AnimalName__c.field-meta.xml
<CustomField>
    <fullName>AnimalName__c</fullName>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipLabel>Expense Reimbursements</relationshipLabel>
    <relationshipName>Expense_Reimbursements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>