SFDEV/force-app/main/default/objects/Expense_Re__c/fields/Bill_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_Number__c</fullName>
    <label>Bill Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>