SFDEV/force-app/main/default/objects/Expense_Re__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Country</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ind</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>