SFDEV/force-app/main/default/objects/Expense_Re__c/fields/Distance_travelled__c.field-meta.xml
<CustomField>
    <fullName>Distance_travelled__c</fullName>
    <label>Distance travelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>