SFDEV/force-app/main/default/objects/Expense_Re__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KA</fullName>
            </value>
            <value>
                <fullName>Ap</fullName>
            </value>
            <value>
                <fullName>Tn</fullName>
            </value>
            <value>
                <fullName>Miss</fullName>
            </value>
            <value>
                <fullName>Alabama</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>