SFDEV/force-app/main/default/objects/Expense_Re__c/recordTypes/Food1.recordType-meta.xml
<RecordType>
    <fullName>Food1</fullName>
    <active>true</active>
    <label>Food1</label>
</RecordType>