SFDEV/force-app/main/default/objects/Expense_Re__c/recordTypes/Food_Records.recordType-meta.xml
<RecordType>
    <fullName>Food_Records</fullName>
    <active>true</active>
    <label>Food Records</label>
</RecordType>