SFDEV/force-app/main/default/objects/Expense_Re__c/recordTypes/Lodging_Records.recordType-meta.xml
<RecordType>
    <fullName>Lodging_Records</fullName>
    <active>true</active>
    <label>Lodging Records</label>
</RecordType>