SFDEV/force-app/main/default/objects/Expense_Re__c/recordTypes/Phone.recordType-meta.xml
<RecordType>
    <fullName>Phone</fullName>
    <active>true</active>
    <label>Phone</label>
</RecordType>