SFDEV/force-app/main/default/objects/Expense_Re__c/recordTypes/Phone_Records.recordType-meta.xml
<RecordType>
    <fullName>Phone_Records</fullName>
    <active>true</active>
    <label>Phone Records</label>
</RecordType>