SFDEV/force-app/main/default/objects/Expense_Re__c/recordTypes/Travel_Records.recordType-meta.xml
<RecordType>
    <fullName>Travel_Records</fullName>
    <active>true</active>
    <label>Travel Records</label>
</RecordType>